# lab_gitlab

./: .gitignore  .pylintrc  Pipfile  README.md  conftest.py  mypy.ini  pyproject.toml
scripts/: fetch_filter_todos_2_md_file.sh  fetch_issues_2_md_file.sh  run_tests_mypy_linter.sh
src/issue_fetcher/: fetcher.py  fetcher_filter_todos.py
tests/: test_fetcher.py  test_fetcher_filter_todos.py
